add play script

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dario Martinez III - Finance & Real Estate</title>
+    <title>Dario Martinez III - Finance Professional</title>
     <!-- Custom SVG Favicon -->
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90' fill='%232ea043'>DM</text></svg>'" />
@@ -31,11 +31,11 @@
                 </path>
             </svg>
         </a>
-        <a href="mailto:martinez.dario@miami.edu" target="_blank" rel="noopener noreferrer"
-            aria-label="Email Dario Martinez">
+        <a href="https://dee3martinez.wordpress.com/" target="_blank" rel="noopener noreferrer"
+            aria-label="WordPress Portfolio">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="social-icon">
                 <path
-                    d="M2 5a2 2 0 012-2h16a2 2 0 012 2v14a2 2 0 01-2 2H4a2 2 0 01-2-2zm2-.5V7l8 5 8-5V4.5zm16 4.236l-7.64 4.775a1.5 1.5 0 01-1.72 0L3 9.736V19.5h17z">
+                    d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm7.238 4.999c1.072 1.59 1.705 3.503 1.705 5.566 0 2.223-.731 4.276-1.965 5.931l-.118-.357-3.026-8.764c.522-.048.992-.083 1.016-.083.52-.061.46-.828-.062-.807-.292 0-1.021.084-1.021.084-.27.031-.238.378-.185.57l.188.656-2.073 6.223-1.914-6.172.912-2.65.66 1.649c.007.02.028.037.053.037h.029c.122-.008.24-.092.24-.228 0-.005 0-.009-.001-.014l-.001-.005-.019-.068-.665-1.832c-.232-.621-.667-.928-1.223-.928h-.008c-.187 0-.331.015-.448.044-.417.108-.68.37-.863.826l-.019.045-.667 1.834-.018.066c-.001.004-.001.009-.001.013 0 .132.113.229.248.229h.028c.118 0 .22-.076.242-.18l.672-1.854.916 2.662-1.906 6.154-2.092-6.24.205-.669c.047-.186-.044-.538-.218-.564-.003 0-.529-.08-.836-.08-.039 0-.058.017-.076.028-.146.091-.034.342-.034.342l3.176 9.206-.194.57a8.004 8.004 0 01-4.743-7.332c0-2.003.753-3.83 1.987-5.198l.016-.018c1.437-1.526 3.481-2.478 5.75-2.478 2.214 0 4.215.908 5.646 2.376l.011.012z">
                 </path>
             </svg>
         </a>
@@ -158,54 +158,9 @@
 
         <!-- Projects Section -->
         <section id="projects">
-            <h2>Highlighted Work</h2>
+            <h2>Short Form Scripts</h2>
 
-            <div class="project">
-                <h3>Equity Research Intelligence Dashboard</h3>
-                <div class="demo-preview">
-                    <p class="demo-caption">View a snapshot of the monitoring workspace</p>
-                    <img src="images/tiktok-demo.png" alt="Equity research dashboard preview" class="demo-thumbnail"
-                        id="demo-thumbnail" />
-                </div>
-                <!-- Lightbox Modal -->
-                <div id="lightbox" class="lightbox">
-                    <span class="close">&times;</span>
-                    <img class="lightbox-content" id="lightbox-img" />
-                </div>
-                <p>
-                    Built a tech-sector monitoring environment for SMIF that combines custom KCIs, DCF sensitivities, and
-                    high-frequency news screens so the team can articulate timely buy/sell/hold calls.
-                </p>
-                <div class="tech-tags">
-                    <span>DCF</span><span>FactSet</span><span>Power BI</span><span>Python</span><span>Excel</span>
-                </div>
-                <a href="MartinezDarioResume.pdf" target="_blank" class="button">See Case Study</a>
-            </div>
-
-            <div class="project">
-                <h3>Industrials ESG Playbook</h3>
-                <p>
-                    Authored the operating model that guided the Century Fund Industrials pod, complete with KPI trees,
-                    ESG scoring rubrics, and valuation guardrails that helped deliver ~18% sector returns.
-                </p>
-                <div class="tech-tags">
-                    <span>Financial Modeling</span><span>ESG</span><span>Leadership</span><span>Excel</span>
-                </div>
-            </div>
-
-            <div class="project">
-                <h3>Capital Markets Monitoring System</h3>
-                <p>
-                    Designed a lightweight toolkit to keep senior bankers informed on ECM sentiment — blending AlphaSense
-                    market tone, Dealogic issuance stats, and bespoke shareholder momentum dashboards.
-                </p>
-                <div class="tech-tags">
-                    <span>Capital Markets</span><span>AlphaSense</span><span>Dealogic</span><span>PitchBook</span>
-                </div>
-            </div>
-        </section>
-    </main>
-
+        
     <!-- Footer -->
     <footer>
         <div class="contact-info">
