modify about section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="header-content">
             <h1>Dario Martinez III</h1>
-            <p id="subtitle">Finance & Real Estate Analyst</p>
+            <p id="subtitle">Finance Professional</p>
         </div>
     </header>
 
@@ -48,13 +48,13 @@
             <img src="headshot.jpeg" alt="Headshot of Dario Martinez III" class="headshot" />
             <div class="about-text">
                 <p>
-                    Currently a senior studying finance and real estate at the Herbert School of Business. I am always
-                    open to growth and never afraid of a challenge that presents itself.
+                    Currently a senior studying finance, real estate, and motion pictures at the Herbert School of Business at the University of Miami. I am always
+                    evolving with the times and never afraid of a challenge that presents itself.
                 </p>
                 <p>
-                    I have a strong passion for monitoring the markets and news at large, data analytics and always open
-                    to learn more. I have a vast experience in personal skills, personal finance, leadership and
-                    quantitative analysis and financial modeling.
+                    I specialize in financial modeling, quantitative analysis, and portfolio management. I
+                    combine a technical mastery of valuation frameworks with a deep focus on global equity and private markets. Dedicated to
+                    high-stakes financial execution and data-driven market strategy.
                 </p>
                 <a href="MartinezDarioResume.pdf" target="_blank" class="button button-about">View My Resume</a>
             </div>
@@ -156,11 +156,33 @@
             </div>
         </section>
 
-        <!-- Projects Section -->
-        <section id="projects">
-            <h2>Short Form Scripts</h2>
-
-        
+        <!-- Script Section -->
+        <section id="script">
+            <h2>Script</h2>
+            <div class="project">
+                <h3>Our Father, Who Art in Hell — Curse Be Thy Name</h3>
+                <p>
+                    A feature-length psychological drama set in 1985 New England. Rick’s 40th birthday triggers
+                    unsettling flashbacks that braid Catholic rituals with the echoes of an abusive father, forcing him
+                    to confront how faith and trauma are intertwined in his family.
+                </p>
+                <div class="tech-tags">
+                    <span>Psychological Drama</span><span>Feature Screenplay</span><span>Family Saga</span>
+                    <span>Faith vs. Fear</span>
+                </div>
+                <ul>
+                    <li>Opens with a domestic celebration cut through by sensory jolts—belt snaps, candle smoke, and
+                        overlapping screams—that signal the emotional stakes.</li>
+                    <li>Reimagines Catholic symbols (crucifixes, Saint Michael calendars, “Our Father” prayers) as
+                        horror devices mirroring Rick’s internal descent.</li>
+                    <li>Balances intimate dialogue with cinematic set pieces to explore intergenerational abuse and the
+                        price of silence.</li>
+                </ul>
+                <a href="Our Father, Who Art in Hell, Curse Be Thy Name.pdf" target="_blank" class="button">Read the
+                    Script</a>
+            </div>
+        </section>
+    </main>
     <!-- Footer -->
     <footer>
         <div class="contact-info">
