edit wordpress logo

--- a/index.html
+++ b/index.html
@@ -33,11 +33,7 @@
         </a>
         <a href="https://dee3martinez.wordpress.com/" target="_blank" rel="noopener noreferrer"
             aria-label="WordPress Portfolio">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="social-icon">
-                <path
-                    d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm7.238 4.999c1.072 1.59 1.705 3.503 1.705 5.566 0 2.223-.731 4.276-1.965 5.931l-.118-.357-3.026-8.764c.522-.048.992-.083 1.016-.083.52-.061.46-.828-.062-.807-.292 0-1.021.084-1.021.084-.27.031-.238.378-.185.57l.188.656-2.073 6.223-1.914-6.172.912-2.65.66 1.649c.007.02.028.037.053.037h.029c.122-.008.24-.092.24-.228 0-.005 0-.009-.001-.014l-.001-.005-.019-.068-.665-1.832c-.232-.621-.667-.928-1.223-.928h-.008c-.187 0-.331.015-.448.044-.417.108-.68.37-.863.826l-.019.045-.667 1.834-.018.066c-.001.004-.001.009-.001.013 0 .132.113.229.248.229h.028c.118 0 .22-.076.242-.18l.672-1.854.916 2.662-1.906 6.154-2.092-6.24.205-.669c.047-.186-.044-.538-.218-.564-.003 0-.529-.08-.836-.08-.039 0-.058.017-.076.028-.146.091-.034.342-.034.342l3.176 9.206-.194.57a8.004 8.004 0 01-4.743-7.332c0-2.003.753-3.83 1.987-5.198l.016-.018c1.437-1.526 3.481-2.478 5.75-2.478 2.214 0 4.215.908 5.646 2.376l.011.012z">
-                </path>
-            </svg>
+            <img src="images/wordpress-logo.svg" alt="WordPress logo" class="social-icon" />
         </a>
     </nav>
 
