redesign experience section

--- a/index.html
+++ b/index.html
@@ -89,66 +89,51 @@
         </section>
 
         <!-- Experience Section -->
-        <section id="experience">
+        <section id="experience" class="experience-showcase">
             <h2>Experience</h2>
-            <div class="timeline">
-                <div class="timeline-item">
-                    <div class="timeline-content">
-                        <h3>Analyst — Technology Team</h3>
-                        <span class="timeline-date">August 2025 – Present</span>
-                        <h4>University of Miami Student Managed Investment Fund | Coral Gables, FL</h4>
-                        <ul>
-                            <li>Perform comparable company and DCF valuations to establish intrinsic value ranges and
-                                transaction multiples for assigned tech equities.</li>
-                            <li>Collaborate with portfolio managers on a $2M long-only strategy, presenting thesis
-                                updates that influence live allocations (technology comprises ~47% of assets).</li>
-                        </ul>
-                    </div>
-                </div>
+            <div class="experience-grid">
+                <article class="experience-card">
+                    <div class="experience-tag">Equity Capital Markets • TMT</div>
+                    <h3>Wells Fargo Securities</h3>
+                    <p class="experience-meta">Investment Banking Summer Analyst — ECM TMT • New York, NY</p>
+                    <ul>
+                        <li>Built shareholder momentum and capital markets dashboards by blending FactSet, AlphaSense, Dealogic,
+                            PitchBook, and RenCap data in near real time.</li>
+                        <li>Drafted ECC memos and executive slides used in senior coverage briefings and client meetings.</li>
+                        <li>Led a pricing war-room simulation comparing comp / intrinsic outputs to the actual transaction result.</li>
+                    </ul>
+                </article>
 
-                <div class="timeline-item">
-                    <div class="timeline-content">
-                        <h3>Investment Banking Fall Analyst — Technology M&A</h3>
-                        <span class="timeline-date">October 2025 – November 2025</span>
-                        <h4>Arcadia Capital | Miami, FL</h4>
-                        <ul>
-                            <li>Supported live sell-side mandates by contributing valuation analysis, buyer targeting,
-                                and CIM / investment memo drafting.</li>
-                            <li>Produced industry and company research across the software ecosystem to back strategic
-                                advisory engagements and sharpen market views.</li>
-                        </ul>
-                    </div>
-                </div>
+                <article class="experience-card">
+                    <div class="experience-tag subtle">Student-Managed Capital</div>
+                    <h3>University of Miami SMIF</h3>
+                    <p class="experience-meta">Analyst — Technology Team • Coral Gables, FL</p>
+                    <ul>
+                        <li>Drive DCF / comps models for enterprise SaaS and semiconductor holdings inside a $2M long-only portfolio.</li>
+                        <li>Author tech watchlists that tie product catalysts, macro signals, and quant screens into weekly briefs.</li>
+                    </ul>
+                </article>
 
-                <div class="timeline-item">
-                    <div class="timeline-content">
-                        <h3>Investment Banking Summer Analyst — ECM TMT</h3>
-                        <span class="timeline-date">June 2025 – August 2025</span>
-                        <h4>Wells Fargo Securities | New York, NY</h4>
-                        <ul>
-                            <li>Helped execute offerings including the Figma IPO and Mobileye follow-on by preparing ECC
-                                memos, valuation analyses, and executive-ready slides.</li>
-                            <li>Leveraged FactSet, AlphaSense, Dealogic, PitchBook, and RenCap to build shareholder
-                                momentum reads, peer comps, and market backdrop updates.</li>
-                            <li>Led a capstone valuation project benchmarking comp and intrinsic results against real
-                                transaction outcomes to inform pricing strategy.</li>
-                        </ul>
-                    </div>
-                </div>
+                <article class="experience-card">
+                    <div class="experience-tag subtle">Tech M&A Advisory</div>
+                    <h3>Arcadia Capital</h3>
+                    <p class="experience-meta">Investment Banking Fall Analyst — Technology M&A • Miami, FL</p>
+                    <ul>
+                        <li>Partnered with VP/Associate teams on sell-side processes, building CIMs, buyer lists, and valuation models.</li>
+                        <li>Coordinated diligence trackers and thematic deep dives across infrastructure and vertical software buyers.</li>
+                    </ul>
+                </article>
 
-                <div class="timeline-item">
-                    <div class="timeline-content">
-                        <h3>Director — Industrials Sector Team</h3>
-                        <span class="timeline-date">January 2023 – May 2025</span>
-                        <h4>Century Fund | Coral Gables, FL</h4>
-                        <ul>
-                            <li>Directed 10 analysts in sector research, asset evaluation, and investment strategy while
-                                teaching an eight-hour financial statement and DCF modeling bootcamp.</li>
-                            <li>Co-developed an ESG portfolio that outperformed the S&P 500 for much of the term,
-                                closing at ~7% overall returns and 18% for industrials.</li>
-                        </ul>
-                    </div>
-                </div>
+                <article class="experience-card">
+                    <div class="experience-tag subtle">Student Leadership</div>
+                    <h3>Century Fund</h3>
+                    <p class="experience-meta">Director — Industrials Sector Team • Coral Gables, FL</p>
+                    <ul>
+                        <li>Mentored 10 analysts, teaching an eight-hour fundamentals + DCF intensive for new cohort members.</li>
+                        <li>Co-built an ESG-aligned allocation that outperformed the S&P 500, closing the semester at ~7% overall
+                            returns and 18% within Industrials.</li>
+                    </ul>
+                </article>
             </div>
         </section>
 
