change icon color, copyright date, and script section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <!-- Navigation Bar -->
     <nav>
         <a href="https://www.linkedin.com/in/dariomartinez3" target="_blank" rel="noopener noreferrer"
+            class="linkedin-link"
             aria-label="LinkedIn Profile">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="social-icon">
                 <path
@@ -147,18 +148,13 @@
                     unsettling flashbacks that braid Catholic rituals with the echoes of an abusive father, forcing him
                     to confront how faith and trauma are intertwined in his family.
                 </p>
-                <div class="tech-tags">
-                    <span>Psychological Drama</span><span>Feature Screenplay</span><span>Family Saga</span>
-                    <span>Faith vs. Fear</span>
-                </div>
-                <ul>
-                    <li>Opens with a domestic celebration cut through by sensory jolts—belt snaps, candle smoke, and
-                        overlapping screams—that signal the emotional stakes.</li>
-                    <li>Reimagines Catholic symbols (crucifixes, Saint Michael calendars, “Our Father” prayers) as
-                        horror devices mirroring Rick’s internal descent.</li>
-                    <li>Balances intimate dialogue with cinematic set pieces to explore intergenerational abuse and the
-                        price of silence.</li>
-                </ul>
+                <p>
+                    Opens with a domestic celebration that’s interrupted by sensory jolts—belt snaps, candle smoke, and
+                    overlapping screams—signaling the emotional stakes. Catholic symbols (crucifixes, Saint Michael
+                    calendars, “Our Father” prayers) become horror devices mirroring Rick’s internal descent while the
+                    narrative balances intimate dialogue with cinematic set pieces exploring intergenerational abuse and
+                    the price of silence.
+                </p>
                 <a href="Our Father, Who Art in Hell, Curse Be Thy Name.pdf" target="_blank" class="button">Read the
                     Script</a>
             </div>
@@ -171,7 +167,7 @@
             <span>&nbsp;&nbsp;•&nbsp;&nbsp;</span>
             <a href="tel:+1-201-214-7999">(201) 214-7999</a>
         </div>
-        <p class="copyright">&copy; 2025 Dario Martinez III</p>
+        <p class="copyright">&copy; 2026 Dario Martinez III</p>
     </footer>
 
     <!-- Scroll to Top Button -->
