add netflix and WB merger analysis

--- a/index.html
+++ b/index.html
@@ -135,25 +135,23 @@
             </div>
         </section>
 
-        <!-- Script Section -->
-        <section id="script">
-            <h2>Script</h2>
+        <!-- Mock M&A Transaction Section -->
+        <section id="transaction">
             <div class="project">
-                <h3>Our Father, Who Art in Hell — Curse Be Thy Name</h3>
+                <h2>Strategic Merger Analysis: WBD and NFLX (Mock Transaction)</h2>
                 <p>
-                    A feature-length psychological drama set in 1985 New England. Rick’s 40th birthday triggers
-                    unsettling flashbacks that braid Catholic rituals with the echoes of an abusive father, forcing him
-                    to confront how faith and trauma are intertwined in his family.
+                    September marked the beginning of this forward-looking exercise—an exploration of how precision
+                    modeling and sector fluency can anticipate market movements before they become headlines. With a TMT
+                    lens sharpened by experience across Finance and Motion Pictures, I blend disciplined valuation
+                    methods with narrative intelligence to pressure-test bold scenarios.
                 </p>
                 <p>
-                    Opens with a domestic celebration that’s interrupted by sensory jolts—belt snaps, candle smoke, and
-                    overlapping screams—signaling the emotional stakes. Catholic symbols (crucifixes, Saint Michael
-                    calendars, “Our Father” prayers) become horror devices mirroring Rick’s internal descent while the
-                    narrative balances intimate dialogue with cinematic set pieces exploring intergenerational abuse and
-                    the price of silence.
+                    This report projects a full enterprise absorption, assuming Netflix inherits WBD's legacy cable
+                    infrastructure while managing $40B in debt obligations. The result is a blueprint for navigating two
+                    converging media giants, demonstrating how macro insight, creative structuring, and rigorous
+                    forecasting can uncover advantage in an evolving landscape.
                 </p>
-                <a href="Our Father, Who Art in Hell, Curse Be Thy Name.pdf" target="_blank" class="button">Read the
-                    Script</a>
+                <a href="WBD%20NFLX.pdf" target="_blank" class="button">View the Report</a>
             </div>
         </section>
     </main>
