--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
                 <p>
                     This report projects a full enterprise absorption, assuming Netflix inherits WBD's legacy cable
                     infrastructure while managing $40B in debt obligations. The result is a blueprint for navigating two
-                    converging media giants, demonstrating how macro insight, creative structuring, and rigorous
-                    forecasting can uncover advantage in an evolving landscape.
+                    converging media giants, demonstrating how macro insight, and creative structuring can uncover
+                    advantage in an evolving media landscape.
                 </p>
                 <a href="WBD%20NFLX.pdf" target="_blank" class="button">View the Report</a>
             </div>
