add wb logo and center

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
         <section id="transaction">
             <div class="project">
                 <h2>Strategic Merger Analysis: WBD and NFLX (Mock Transaction)</h2>
+                <img src="images/NetflixWB.jpg" alt="Mock Netflix and WBD merger visualization" class="project-thumb" />
                 <p>
                     September marked the beginning of this forward-looking exercise—an exploration of how precision
                     modeling and sector fluency can anticipate market movements before they become headlines. With a TMT
