--- a/education.html
+++ b/education.html
@@ -12,10 +12,13 @@
 
 <body class="page-education">
     <nav>
-        <a href="home.html">Home</a>
-        <a href="experience.html">Experience</a>
-        <a href="education.html" class="active">Education</a>
-        <a href="projects.html">Personal Projects</a>
+        <div class="nav-links">
+            <a href="home.html">Home</a>
+            <a href="experience.html">Experience</a>
+            <a href="education.html" class="active">Education</a>
+            <a href="projects.html">Personal Projects</a>
+            <a class="nav-resume" href="MartinezDarioResume.pdf" target="_blank">View Resume</a>
+        </div>
     </nav>
 
     <main>
@@ -24,7 +27,11 @@
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-content">
-                        <h3>University of Miami — Herbert Business School</h3>
+                        <div class="edu-header">
+                            <img src="images/Miami_Hurricanes_logo.svg.png" alt="University of Miami logo"
+                                class="org-logo" />
+                            <h3>University of Miami — Herbert Business School</h3>
+                        </div>
                         <h4>B.B.A. Finance, Minor in Motion Pictures (GPA: 3.75)</h4>
                         <span class="timeline-date">2022 – 2026</span>
                         <p><strong>Honors:</strong> Provost’s Honor Roll, Dean’s List, Presidential Scholarship, Real
@@ -36,7 +43,11 @@
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-content">
-                        <h3>Fordham Preparatory School</h3>
+                        <div class="edu-header">
+                            <img src="images/Fordham_Preparatory_School_seal.svg.png"
+                                alt="Fordham Preparatory School seal" class="org-logo" />
+                            <h3>Fordham Preparatory School</h3>
+                        </div>
                         <h4>High School Diploma</h4>
                         <span class="timeline-date">2018 – 2022</span>
                         <p><strong>Highlights:</strong> Founder of the Hispanic Society, National African American /
@@ -58,8 +69,8 @@
 
     <button id="scroll-to-top" title="Go to top">↑</button>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.topology.min.js"></script>
     <script src="script.js"></script>
 </body>
 
