--- a/home.html
+++ b/home.html
@@ -21,10 +21,13 @@
     </header>
 
     <nav>
-        <a href="home.html" class="active">Home</a>
-        <a href="experience.html">Experience</a>
-        <a href="education.html">Education</a>
-        <a href="projects.html">Personal Projects</a>
+        <div class="nav-links">
+            <a href="home.html" class="active">Home</a>
+            <a href="experience.html">Experience</a>
+            <a href="education.html">Education</a>
+            <a href="projects.html">Personal Projects</a>
+            <a class="nav-resume" href="MartinezDarioResume.pdf" target="_blank">View Resume</a>
+        </div>
     </nav>
 
     <main>
@@ -34,14 +37,14 @@
                 <img src="headshot.jpeg" alt="Headshot of Dario Martinez III" class="headshot" />
                 <div class="about-text">
                     <p>
-                        Currently a senior studying finance, real estate, and motion pictures at the Herbert School of
-                        Business at the University of Miami. I am always evolving with the times and never afraid of a
-                        challenge that presents itself.
+                        I am a senior at the Herbert Business School at the University of Miami studying finance, real estate, and motion
+                        pictures. I enjoy tackling complex problems and adapting to an industry that is constantly evolving.
+                        
                     </p>
                     <p>
-                        I specialize in financial modeling, quantitative analysis, and portfolio management. I combine
-                        a technical mastery of valuation frameworks with a deep focus on global equity and private
-                        markets. Dedicated to high-stakes financial execution and data-driven market strategy.
+                    I have expertise in financial modeling, quantitative analysis, and portfolio management, combining valuation frameworks
+                    with a strong focus on global public and private markets. My work is defined by precision, analytical discipline, and a
+                    commitment to evidence based market strategy.
                     </p>
                     <a href="MartinezDarioResume.pdf" target="_blank" class="button button-about">View My Resume</a>
                 </div>
@@ -60,8 +63,8 @@
 
     <button id="scroll-to-top" title="Go to top">↑</button>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.topology.min.js"></script>
     <script src="script.js"></script>
 </body>
 
