--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
     </header>
 
     <nav>
-        <a href="home.html" class="active">Home</a>
-        <a href="experience.html">Experience</a>
-        <a href="education.html">Education</a>
-        <a href="projects.html">Personal Projects</a>
+        <div class="nav-links">
+            <a href="home.html" class="active">Home</a>
+            <a href="experience.html">Experience</a>
+            <a href="education.html">Education</a>
+            <a href="projects.html">Personal Projects</a>
+            <a class="nav-resume" href="MartinezDarioResume.pdf" target="_blank">View Resume</a>
+        </div>
     </nav>
 
     <main>
@@ -60,8 +63,8 @@
 
     <button id="scroll-to-top" title="Go to top">↑</button>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.topology.min.js"></script>
     <script src="script.js"></script>
 </body>
 
