--- a/projects.html
+++ b/projects.html
@@ -12,10 +12,13 @@
 
 <body class="page-projects">
     <nav>
-        <a href="home.html">Home</a>
-        <a href="experience.html">Experience</a>
-        <a href="education.html">Education</a>
-        <a href="projects.html" class="active">Personal Projects</a>
+        <div class="nav-links">
+            <a href="home.html">Home</a>
+            <a href="experience.html">Experience</a>
+            <a href="education.html">Education</a>
+            <a href="projects.html" class="active">Personal Projects</a>
+            <a class="nav-resume" href="MartinezDarioResume.pdf" target="_blank">View Resume</a>
+        </div>
     </nav>
 
     <main>
@@ -52,8 +55,8 @@
 
     <button id="scroll-to-top" title="Go to top">↑</button>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.topology.min.js"></script>
     <script src="script.js"></script>
 </body>
 
