add WBD NFLX comparison

--- a/experience.html
+++ b/experience.html
@@ -28,7 +28,8 @@
                 <article class="experience-card">
                     <div class="experience-tag">Equity Capital Markets • TMT</div>
                     <div class="card-header">
-                        <img src="images/Wells_Fargo-Logo.wine.png" alt="Wells Fargo logo" class="org-logo" />
+                        <img src="images/Wells_Fargo-Logo.wine.png" alt="Wells Fargo logo"
+                            class="org-logo org-logo-large" />
                         <div>
                             <h3>Wells Fargo Securities</h3>
                             <p class="experience-meta">Investment Banking Summer Analyst, ECM TMT Group • New York, New York</p>
@@ -51,7 +52,7 @@
                     <div class="experience-tag subtle">Student-Managed Capital</div>
                     <div class="card-header">
                         <img src="images/University-of-miami-patti-and-allan-herbert-business-school-logo.png"
-                            alt="University of Miami Herbert Business School logo" class="org-logo" />
+                            alt="University of Miami Herbert Business School logo" class="org-logo org-logo-large" />
                         <div>
                             <h3>University of Miami SMIF</h3>
                             <p class="experience-meta">Analyst, Technology Team • Coral Gables, Florida</p>
@@ -69,7 +70,8 @@
                 <article class="experience-card">
                     <div class="experience-tag subtle">Tech M&A Advisory</div>
                     <div class="card-header">
-                        <img src="images/arcadiacapitallog.webp" alt="Arcadia Capital logo" class="org-logo" />
+                        <img src="images/arcadiacapitallog.webp" alt="Arcadia Capital logo"
+                            class="org-logo org-logo-large" />
                         <div>
                             <h3>Arcadia Capital</h3>
                             <p class="experience-meta">Investment Banking Fall Analyst, Technology M&amp;A • Miami, Florida</p>
