--- a/education.html
+++ b/education.html
@@ -16,7 +16,7 @@
             <a href="home.html">Home</a>
             <a href="experience.html">Experience</a>
             <a href="education.html" class="active">Education</a>
-            <a href="projects.html">Personal Projects</a>
+            <a href="projects.html">WBD and NFLX Mock Transaction</a>
             <a class="nav-resume" href="MartinezDarioResume.pdf" target="_blank">View Resume</a>
         </div>
     </nav>
