--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
             <a href="home.html" class="active">Home</a>
             <a href="experience.html">Experience</a>
             <a href="education.html">Education</a>
-            <a href="projects.html">Personal Projects</a>
+            <a href="projects.html">WBD and NFLX Mock Transaction</a>
             <a class="nav-resume" href="MartinezDarioResume.pdf" target="_blank">View Resume</a>
         </div>
     </nav>
