fix nav bar height and add relevant coursework

--- a/education.html
+++ b/education.html
@@ -39,6 +39,17 @@
                         <p><strong>Relevant Coursework:</strong> Business Analytics & Statistics, Financial & Managerial
                             Accounting, Real Estate Investment Analysis, Investment & Security Markets, Intro to M&A,
                             Fundamentals of Finance</p>
+                        <ul class="coursework-details">
+                            <li>Applied regression analysis and statistical modeling to evaluate business and
+                                investment decisions</li>
+                            <li>Reconciled and analyzed financial statements to understand company performance and
+                                capital structure</li>
+                            <li>Built discounted cash flow models using core accounting and valuation principles</li>
+                            <li>Evaluated lease versus buy decisions and capital allocation trade offs</li>
+                            <li>Conducted property level valuation and real estate investment analysis</li>
+                        </ul>
+                        <p><strong>Relevant Clubs and Organizations:</strong> Delta Sigma Pi, Association of Latino
+                            Professionals for America, Kappa Sigma, NABA</p>
                     </div>
                 </div>
                 <div class="timeline-item">
