--- a/experience.html
+++ b/experience.html
@@ -51,8 +51,9 @@
                 <article class="experience-card">
                     <div class="experience-tag subtle">Student-Managed Capital</div>
                     <div class="card-header">
-                        <img src="images/University-of-miami-patti-and-allan-herbert-business-school-logo.png"
-                            alt="University of Miami Herbert Business School logo" class="org-logo org-logo-large" />
+                        <img src="images/umiamibusinesslogo.jpg"
+                            alt="University of Miami Herbert Business School logo"
+                            class="org-logo org-logo-large org-logo-umiami" />
                         <div>
                             <h3>University of Miami SMIF</h3>
                             <p class="experience-meta">Analyst, Technology Team • Coral Gables, Florida</p>
