--- a/education.html
+++ b/education.html
@@ -32,8 +32,9 @@
                                 class="org-logo" />
                             <h3>University of Miami — Herbert Business School</h3>
                         </div>
-                        <h4>B.B.A. Finance, Minor in Motion Pictures (GPA: 3.75)</h4>
+                        <h4>B.B.A. Finance, Minor in Motion Pictures</h4>
                         <span class="timeline-date">2022 – 2026</span>
+                        <p><strong>GPA:</strong> 3.75</p>
                         <p><strong>Honors:</strong> Provost’s Honor Roll, Dean’s List, Presidential Scholarship, Real
                             Estate Association Scholar</p>
                         <p><strong>Relevant Coursework:</strong> Business Analytics & Statistics, Financial & Managerial
