add batting title to fordham prep and update favicon

--- a/education.html
+++ b/education.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dario Martinez III - Education</title>
-    <link rel="icon"
-        href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext x='50' y='62' font-family='Playfair Display, serif' font-style='italic' font-size='58' fill='%23ffffff' stroke='%230066cc' stroke-width='0.4' text-anchor='middle'%3EDM%3C/text%3E%3C/svg%3E" />
+    <link rel="icon" href="images/favicon.png" />
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -63,7 +62,7 @@
                         <h4>High School Diploma</h4>
                         <span class="timeline-date">2018 – 2022</span>
                         <p><strong>Highlights:</strong> Founder of the Hispanic Society, National African American /
-                            Hispanic Scholar, Batting Title Winner (2019)</p>
+                            Hispanic Scholar, <a href="https://www.maxpreps.com/ny/bronx/fordham-prep-rams/athletes/dario-martinez/baseball/stats/?careerid=rf6p165vqticc" target="_blank" rel="noopener noreferrer">Batting Title Winner (2019)</a></p>
                     </div>
                 </div>
             </div>
