--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dario Martinez III - Finance Professional</title>
-    <link rel="icon"
-        href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext x='50' y='62' font-family='Playfair Display, serif' font-style='italic' font-size='58' fill='%23ffffff' stroke='%230066cc' stroke-width='0.4' text-anchor='middle'%3EDM%3C/text%3E%3C/svg%3E" />
+    <link rel="icon" href="images/favicon.png" />
     <link rel="stylesheet" href="style.css" />
     <meta name="description"
         content="Dario Martinez III — finance + real estate analyst with experience in SMIF leadership, ECM coverage, and technology M&A advisory." />
