update favicon to use lexend

--- a/experience.html
+++ b/experience.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dario Martinez III - Experience</title>
-    <link rel="icon" href="images/favicon.png" />
+    <link rel="icon"
+        href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext x='50' y='62' font-family='Lexend' font-weight='500' font-size='58' fill='%23ffffff' stroke='%230066cc' stroke-width='0.4' text-anchor='middle'%3EDM%3C/text%3E%3C/svg%3E" />
     <link rel="stylesheet" href="style.css" />
 </head>
 
